install devise UserToProduct

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,11 +15,12 @@
   height: 50px;
 }
 
+
 /* User Avatar */
 .navbar-wagon .avatar {
   height: 35px;
   width: 35px;
-  border-radius: 50%;
+ 
 }
 
 /* Right section */
@@ -44,7 +45,20 @@
   color: #da552f;
   text-decoration: none;
 }
-
+/*bouton de droite*/
+.btn-medium {
+  color: #999999;
+  border: 1px solid #999999;
+  padding: 10px 15px;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.6;
+}
+.btn-medium:hover {
+  opacity: 1;
+  text-decoration: none;
+  color: #999999;
+}
 /* Dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
