--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+     <%= f.input :name,  autofocus: true %>
     <%= f.input :email, required: true, autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -16,12 +17,12 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <%= f.button :submit, "mettre à jour" %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>pas content(e)? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "t'es sûr? Tu vas nous manquer" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
