--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%=image_path "girls.jpg" %>');">
+  <div class="banner-content">
+    <h1>Marre de passer une journée de merde ?</h1>
+    
+    <% if user_signed_in? %>
+          <% if @products.any? -%>
+            <div>les dernières horreurs
+              <ul>
+                <%= render 'shared/list' %>
+              </ul>
+            <!--< %= paginate @products %>-->
+          <% end %>
+            </div>
+    <%else%>
+      <div>
+        Pour cracher ton venin en bonne compagnie, et rire un peu <%= link_to "Inscris-toi →", products_path, class:"btn btn-danger btn-lg"%>
+      </div>
+    <%end%>
+</div>
