--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -3,7 +3,7 @@
         
         
         <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-            <h1 class="text-center"> J'en ai une bien bonne à partager </h1>
+            <h1 class="text-center"> On peut rester léger, ... ou pas ! </h1>
             <%= simple_form_for @product do |f| %>
           
                <div class="form-group">
