--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,10 @@
 @import "font-awesome";
 
 // Your CSS partials
-@import "layouts/index";
+@import "components/alert";
+@import "components/banner";
 @import "components/index";
+@import "components/list";
+@import "components/navbar";
 @import "pages/index";
+@import "layouts/index";
