--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,2 +1,9 @@
-// Specific CSS for your home-page
-// Import page-specific CSS files here.
+/* home link */
+.home-link {
+  color: #ffffff;
+  font-size: 25px;
+}
+.home-link:hover {
+  color: pink;
+  text-decoration: none;
+}
