--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,14 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%=image_path "girls.jpg" %>');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 2%), url('<%=image_path "girls.jpg" %>');">
   <div class="banner-content">
-    <h1>Marre de passer une journée de merde ?</h1>
+    <h1>Marre de passer une journée de merde ? </br></h1>
     
     <% if user_signed_in? %>
           <% if @products.any? -%>
-            <div>les dernières horreurs
-              <ul>
+            <div>
+            <h2>Ici tu peux déverser ton fiel alors enjoy !</h2>
+            
                 <%= render 'shared/list' %>
-              </ul>
-            <!--< %= paginate @products %>-->
+             
           <% end %>
             </div>
     <%else%>
