--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,7 @@
 
  <% @products.each do |p| %>
         <p>
-                <%= link_to p.title, product_path(p), class: "list-link"%> - <%= p.created_at.strftime("%d %b. %Y") %> -  <%= p.user.email %>
+                <%= link_to p.title, product_path(p), class: "list-link"%> - <%= p.created_at.strftime("%d %b. %Y") %> -  <%= p.user.name %>
         </p>
         <%end%>
         </br>
