--- a/app/views/shared/_list.html.erb
+++ b/app/views/shared/_list.html.erb
@@ -3,7 +3,7 @@
 
  <% @products.order(id: :desc).limit(5).each do |p| %>
         <p>
-                <%= link_to p.title, product_path(p), class: "home-link"%> - <%= p.created_at.strftime("%d %b. %Y") %> -  <%= p.user.email %>
+                <%= link_to p.title, product_path(p), class: "home-link"%> - <%= p.created_at.strftime("%d %b. %Y") %> -  <%= p.user.name %>
         </p>
         <%end%>
 </div>
