modification de la home

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,8 +4,14 @@
         
         <div class="col-xs-12 col-sm-6 col-sm-offset-3">
           <h2>Mon profil</h2>
-         
           
+         
+                      <!-- < % @products.self.each do |p| %>
+        <p>
+                <!-- < %= link_to p.title, product_path(p), class: "list-link"%> - <!-- < %= p.created_at.strftime("%d %b. %Y") %> 
+        </p>
+        <!-- < %end%> -->
+
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
