--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
         
         
         <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-<h2>Sign up</h2>
+<h2>Inscris-toi pour déverser ton venin !</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
