--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 2%), url('<%=image_path "girls.jpg" %>');">
   <div class="banner-content">
     <h1>Marre de passer une journée de merde ? </br></h1>
-    
+    <% if user_signed_in? %>
     
           <% if @products.any? -%>
             <div>
@@ -13,7 +13,9 @@
             </div>
     <%else%>
       <div>
+          <%= render 'shared/list' %>
         Pour cracher ton venin en bonne compagnie, et rire un peu <%= link_to "Inscris-toi →",  new_user_registration_path, class:"btn btn-danger btn-lg"%>
       </div>
+  <%end%>
 
 </div>
